# aclnexus

./: .gitignore  AUTH_PAGES_UPDATE.md  UI_IMPROVEMENTS_SUMMARY.md
backend/: Cargo.toml  requirements.md
backend/src/: main.rs
backend/src/database/: db.rs
backend/src/middleware/: auth_middleware.rs
backend/src/models/: activity_log.rs  analytics.rs  dashboard.rs  milestone.rs  mod.rs  project.rs  role.rs  task.rs  team_member.rs  user.rs
backend/src/routes/: activity_log.rs  analytics.rs  auth.rs  dashboard.rs  milestone.rs  mod.rs  project.rs  role.rs  task.rs  team_member.rs
backend/src/utils/: jwt.rs
database/: README.md  schema.sql  seed.sql
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CreateMilestone.jsx  CreateProject.jsx  CreateTask.jsx  CreateTeamMember.jsx  Navbar.jsx  ProtectedRoute.jsx  Sidebar.jsx
frontend/src/pages/: ActivityLogs.jsx  AdminDashboard.jsx  Analytics.jsx  ChangePassword.jsx  Dashboard.css  Dashboard.jsx  EmployeeDashboard.jsx  ForgotPassword.jsx  Login.jsx  ManagerDashboard.jsx  Milestones.jsx  Notifications.jsx  Profile.jsx  Projects.jsx  Register.jsx  Tasks.jsx  TeamMembers.jsx
frontend/src/src/: App.jsx
