[package]
name = "pms_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }

serde_json = "1"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros"] }

dotenvy = "0.15"

bcrypt = "0.17"

uuid = { version = "1", features = ["v4"] }
